--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/estilos/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>TFTN</title>
 </head>
@@ -38,7 +38,7 @@
     <div class="content">
         <div class="inicio">
             <h1>Bienvenido!</h1>
-            <a><button class="content-button">Ver más</button></a>
+            <a href="componentes/catalogo.html"><button class="content-button">Ver más</button></a>
         </div> 
     </div>
     <br>
