--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a onclick="closeNav()" class="close">&times;</a>
                 <br>
                 <div class="overlay-content">
-                    <a href="" onclick="closeNav()">catalogo</a>
+                    <a href="componentes/catalogo.html" onclick="closeNav()">catalogo</a>
                     <a href=""onclick="closeNav()">tabla de talles</a>
                     <a href=""onclick="closeNav()">ayuda</a>
                 </div>
