--- a/componentes/catalogo.html
+++ b/componentes/catalogo.html
@@ -14,13 +14,13 @@
     <header class="header">
         <a onclick="openNav()" class="menu" href="#"><button><span class="fas fa-bars"></span></button></a>
         <div class="logo-nombre">
-            <a href="/index.html"><img src="/img/TFTNletras.png" alt="letrasTFTN"></a>
+            <a href="/"><img src="/img/TFTNletras.png" alt="letrasTFTN"></a>
         </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="#">Catalogo</a></li>
-                <li><a href="#">Tabla de talles</a></li>
-                <li><a href="#">Ayuda</a></li>
+                <li><a href="/componentes/catalogo.html">Catalogo</a></li>
+                <li><a href="/">Tabla de talles</a></li>
+                <li><a href="/">Ayuda</a></li>
             </ul>
         </nav>
         <div class="logo">
