--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             </div>
             <nav>
                 <ul class="nav-links">
-                    <li><a href="#">Catalogo</a></li>
-                    <li><a href="#">Tabla de talles</a></li>
-                    <li><a href="#">Ayuda</a></li>
+                    <li><a href="/componentes/catalogo.html">Catalogo</a></li>
+                    <li><a href="/">Tabla de talles</a></li>
+                    <li><a href="/">Ayuda</a></li>
                 </ul>
             </nav>
             <div class="logo">
