--- a/componentes/catalogo.html
+++ b/componentes/catalogo.html
@@ -100,6 +100,26 @@
                 </div>
             </div>
             </article>
+            <article>
+                <div class="producto">
+                    <img src="/img/productos/card1.jpeg" alt="img" class="card-img">
+                    <div>
+                        <h3 class="card-name">remera</h3>
+                        <span class="card-precio">$1000</span>
+                    </div>
+                </div>
+                <div class="modal">
+                    <div class="modal-card">
+                      <i class="ri-close-line close-modal"></i>
+                      <img src="/img/productos/card1.jpeg" alt="img" class="img-modal">
+                      <div >
+                          <h3 class="modal-name">remera</h3>
+                          <p class="modal-info"> remeras super linda de messi</p>      
+                          <span class="modal-precio">$1000</span>              
+                      </div>
+                    </div>
+                </div>
+              </article>
         </div>
         
 
