ordenacion de archivos

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <nav>
                 <ul class="nav-links">
-                    <li><a href="/componentes/catalogo.html">Catalogo</a></li>
+                    <li><a href="/catalogo.html" >Catalogo</a></li>
                     <li><a href="/">Tabla de talles</a></li>
                     <li><a href="/">Ayuda</a></li>
                 </ul>
@@ -29,7 +29,7 @@
                 <a onclick="closeNav()" class="close">&times;</a>
                 <br>
                 <div class="overlay-content">
-                    <a href="componentes/catalogo.html" onclick="closeNav()">catalogo</a>
+                    <a href="#/catalogo" onclick="closeNav()">catalogo</a>
                     <a href=""onclick="closeNav()">tabla de talles</a>
                     <a href=""onclick="closeNav()">ayuda</a>
                 </div>
@@ -77,7 +77,6 @@
          </div>
         </div>
      </footer>
-   
     <script type="text/javascript" src="nav.js"></script>
 </body>
 </html>
