--- a/catalogo.html
+++ b/catalogo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/estilos/style.css">
-    <link rel="stylesheet" href="/componentes/catalogo.css">
+    <link rel="stylesheet" href="/estilos/catalogo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css">
     <title>Catalogo</title>
@@ -18,7 +18,7 @@
         </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="/componentes/catalogo.html">Catalogo</a></li>
+                <li><a href="/catalogo.html">Catalogo</a></li>
                 <li><a href="/">Tabla de talles</a></li>
                 <li><a href="/">Ayuda</a></li>
             </ul>
@@ -38,7 +38,7 @@
             </div>
         </div> 
     </header>
-    <section class="productos">
+    <section class="productos" id="catalogo">
         <div class="card-container">
             <article>
               <div class="producto">
