--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="content">
         <div class="inicio">
             <h1>Bienvenido!</h1>
-            <a href="componentes/catalogo.html"><button class="content-button">Ver más</button></a>
+            <a href="/catalogo.html"><button class="content-button">Ver más</button></a>
         </div> 
     </div>
     <br>
